Test Query hinzugefügt und Swagger angepasst
